@@ -7,6 +7,8 @@ Version 6.7.1 - not yet released
   - fix crash replaying an IGC file with no B record extensions (#3107)
 * user interface
   - new translation: Lithuanian
+* Android
+  - fix crash in "credits" dialog on Android 4 (#3106)
 * Kobo
   - fix passphrase entry in WiFi setup (#3053)
 
